--- a/bindings/nodejs/ffi/package.json
+++ b/bindings/nodejs/ffi/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sdb",
   "version": "0.9.2",
-  "url": "https://www.github.com/radareorg/sdb",
+  "url": "https://www.github.com/rizin/sdb",
   "description": "simple keyvalue database with native json support",
   "dependencies": {
     "node-ffi": "*"
