--- a/test/bench/meson.build
+++ b/test/bench/meson.build
@@ -10,8 +10,7 @@ tests = [
 foreach test : tests
   name = 'bench-' + test
   exe = executable(name, name + '.c',
-    include_directories: sdb_inc,
-    link_with: libsdb.get_static_lib()
+    dependencies: sdb_dep,
   )
   benchmark(name, exe)
 endforeach
