--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,33 +2,35 @@ name: SDB
 
 on:
     push:
-        branches: [$default-branch]
+        branches:
+        - master
     pull_request:
-        branches: [$default-branch]
+        branches:
+        - master
 
 jobs:
     build:
         runs-on: ubuntu-20.04
         steps:
-            - name: Install dependencies
-              run: |
-                  sudo apt --assume-yes update
-                  sudo apt install ninja-build
-
-            - name: Install Meson
-              run: pip3 install -U meson
+            - name: Install Meson + Ninja
+              run: pip3 install -U meson ninja
 
             - uses: actions/checkout@v2
             - name: Running mmap build
               run: |
-                  meson build
-                  ninja -C build
-
+                  meson build-mmap
+                  ninja -C build-mmap
+                  
+            - name: Testing mmap build
+              run: ninja -C build-mmap test
+                  
             - name: Running non-mmap build
               env:
                   CFLAGS: -DUSE_MMAN=-0
                   VERBOSE: 1
               run: |
-                  rm -rf build
-                  meson build
-                  ninja -C build
+                  meson build-nommap
+                  ninja -C build-nommap
+                  
+            - name: Testing non-mmap build
+              run: ninja -C build-nommap test
