--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,2 +1,3 @@
 option('enable_tests', type: 'boolean', value: true, description: 'Build unit tests in test/unit')
 option('local', type: 'boolean', value: false, description: 'Adds support for local/side-by-side installation (sets rpath if needed)')
+option('static_runtime', type: 'boolean', value: false, description: 'Use static runtime (e.g. /MT on Windows, -static on Unix)')
