sdb_native_exe also requires library compiled in a native way to work

--- a/meson.build
+++ b/meson.build
@@ -78,7 +78,7 @@ sdb_exe = executable('sdb', 'src/main.c',
 
 if meson.is_cross_build()
   sdb_native_exe = executable('sdb_native', 'src/main.c',
-    dependencies: sdb_dep,
+    dependencies: sdb_native_dep,
     install: false,
     implicit_include_directories: false,
   )
