--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,7 @@
 project('sdb', 'c', meson_version: '>=0.50.0', default_options: [
   'buildtype=debugoptimized', 'b_vscrt=from_buildtype'
 ])
-py3_exe = import('python').find_installation('python3')
+py3_exe = import('python').find_installation()
 pkgconfig_mod = import('pkgconfig')
 cc = meson.get_compiler('c')
 
