Add unit tests for sdb_itoa

--- a/test/unit/meson.build
+++ b/test/unit/meson.build
@@ -4,7 +4,8 @@ if get_option('enable_tests')
     'diff',
     'hash',
     'ls',
-    'sdb'
+    'sdb',
+    'util',
   ]
 
   foreach test : tests
